// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding service fee: add service fee - applicable 1`] = `
Object {
  "items": Array [
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 9.09,
        "taxPercentage": 10,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 10,
      },
    },
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 8.33,
        "taxPercentage": 20,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 20,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 19.995,
    "taxContent": 2.575,
  },
  "sumPriceShown": Object {
    "currency": "HUF",
    "priceSum": 200,
  },
}
`;

exports[`Adding service fee: add service fee - included 1`] = `
Object {
  "items": Array [
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 9.09,
        "taxPercentage": 10,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 10,
      },
    },
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 8.33,
        "taxPercentage": 20,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 20,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 19.995,
    "taxContent": 2.575,
  },
  "sumPriceShown": Object {
    "currency": "HUF",
    "priceSum": 200,
  },
}
`;

exports[`Adding service fee: add service fee - nofee 1`] = `
Object {
  "items": Array [
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 0,
        "taxPercentage": 10,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 10,
      },
    },
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 0,
        "taxPercentage": 20,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 20,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 0,
    "taxContent": 0,
  },
  "sumPriceShown": Object {
    "currency": "HUF",
    "priceSum": 200,
  },
}
`;

exports[`No items defined 1`] = `
Object {
  "items": Array [],
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 0,
    "taxContent": 0,
  },
  "sumPriceShown": Object {
    "currency": "HUF",
    "priceSum": 200,
    "tax": 20,
  },
}
`;

exports[`No service fee defined 1`] = `
Object {
  "items": Array [
    Object {
      "serviceFee": Object {
        "currency": "HUF",
        "netPrice": 0,
        "taxPercentage": 20,
      },
      "sumPriceShown": Object {
        "currency": "HUF",
        "priceSum": 100,
        "tax": 20,
      },
    },
  ],
  "serviceFee": Object {
    "currency": "HUF",
    "grossPrice": 0,
    "taxContent": 0,
  },
  "sumPriceShown": Object {
    "currency": "HUF",
    "priceSum": 100,
  },
}
`;
